--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-"# ralfianaragon.github.io"
-"Hello World"
+<html>
+<head><title> Body Attributes </titles></head>
+
+<body bgcolor="#11f111" link="blue" vlink="purple" alink="red">
+
+<h1> This is sample links </h1>
+<a href="indes.htm"> Sample Link 1 </a><br>
+<a href=""> Sample Link 2 </a><br>
+<a href=""> Sample Link 3 </a>
+
+</body>
+
+</html>
