--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title> Body Attributes </titles></head>
+<head> <title> Body Attributes </title></head>
 
 <body bgcolor="#11f111" link="blue" vlink="purple" alink="red">
 
