--- a/b.html
+++ b/b.html
@@ -1,7 +1,6 @@
 <html>
-<head><title> Long Test </title></head>
 <body>
-<br><a href="a.html"> BACK </a>
+<a href="a.html"> BACK </a>
  
  </body>
  </html>
