--- a/bootstrap-practical/index.html
+++ b/bootstrap-practical/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">ITWD</a>
+                <a class="navbar-brand page-scroll" href="#page-top">WEBDES</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
